2025-08-22T12:42:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17155566698 # 1176
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-22
* notice: last 14d: unq all: 33 61
* notice: prev accum: outdated-unq outdated-all / unq all: 4567 9398 / 4632 9476
* notice: next accum: outdated-unq outdated-all / unq all: 4581 9416 / 4633 9477
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-08] / [2025-08-22]

2025-08-22T01:44:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17143701142 # 1175
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-22
* notice: last 14d: unq all: 38 71
* notice: prev accum: outdated-unq outdated-all / unq all: 4567 9398 / 4595 9430
* notice: next accum: outdated-unq outdated-all / unq all: 4567 9398 / 4632 9476
* notice: prev exec diff / last date diff / accum: unq all: +37 +46 -5 -7 / +5 +6 -0 -0 / 5 6
* notice: removed / changed dates: [] / [2025-08-08 2025-08-15 2025-08-16 2025-08-17 2025-08-18 2025-08-19 2025-08-20 2025-08-21]

2025-08-21T12:43:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17127246431 # 1174
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-21
* notice: last 14d: unq all: 21 32
* notice: prev accum: outdated-unq outdated-all / unq all: 4563 9392 / 4595 9430
* notice: next accum: outdated-unq outdated-all / unq all: 4567 9398 / 4595 9430
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-07] / []

2025-08-20T12:44:18Z: