@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-22T12:42:22Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2025-08-23T01:40:28Z",
+  "count" : 2,
+  "count_minmax" : [ 1, 2 ],
+  "count_decinc" : [ -0, +2 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
