@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-22T12:42:22Z",
+  "timestamp" : "2025-08-23T01:40:28Z",
   "count_outdated" : 9416,
   "uniques_outdated" : 4581,
-  "count" : 9477,
-  "uniques" : 4633,
+  "count" : 9478,
+  "uniques" : 4634,
   "clones" : [
     {
       "timestamp": "2025-08-09T00:00:00Z",
@@ -124,12 +124,12 @@
     },
     {
       "timestamp": "2025-08-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
