@@ -1,5 +1,5 @@
 {
-  "count": 61,
+  "count": 62,
   "uniques": 33,
   "clones": [
     {
@@ -69,8 +69,8 @@
     },
     {
       "timestamp": "2025-08-22T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
