@@ -1,3 +1,12 @@
+2025-08-23T01:40:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17169603799 # 1177
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-23
+* notice: last 14d: unq all: 33 62
+* notice: prev accum: outdated-unq outdated-all / unq all: 4581 9416 / 4633 9477
+* notice: next accum: outdated-unq outdated-all / unq all: 4581 9416 / 4634 9478
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2025-08-22]
+
 2025-08-22T12:42:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17155566698 # 1176
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-22
